tests/models/enum/named/i16/fail/max_items.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(max_items = 2)]
        value: i16
    },
}
fn main() {}
